--- a/samples/BlazacoTestApp/wwwroot/index.html
+++ b/samples/BlazacoTestApp/wwwroot/index.html
@@ -19,6 +19,6 @@
     <script type="blazor-boot">
     </script>
 
-    <script src="_framework/components.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
